<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="feet">Feet</string>
    <string name="inches">Inches</string>
    <string name="weight">Weight</string>
    <string name="putFeet">Put Height</string>
    <string name="putinches">Put Inches</string>
    <string name="putWeight"> Put Weight</string>
    <string name="calculate">Calculate</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="displaybmi">Your BMI Is</string>
</resources>
